--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -116,7 +116,7 @@ section#header {
   }
 
 section#introduction {
-    background: linear-gradient($gradient_tilt2, rgb(20, 20, 20), rgba(35, 35, 42));
+    background: linear-gradient($gradient_tilt2, rgb(20, 20, 20), rgb(35, 35, 42));
     color: white;
 
     display: flex;
