--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -94,6 +94,16 @@ section#header {
             max-height: 2em;
 
             margin-right: $lg_spacing;
+            text-decoration: none;
+            color: white;
+
+            &:hover {
+                color: white;
+            }
+            &:visited {
+                color: white;
+            }
+
             &:last-child {
                 margin-right: 0px;
             }
