--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -7,6 +7,7 @@ $lg_spacing: 16px;
 $xl_spacing: 32px;
 
 $reg_max_width: 720px;
+$mob_max_width: calc(100% - 12px);
 
 $go_blue: #00acd7;
 $ts_blue: #3178c6;
@@ -45,17 +46,16 @@ section#header {
     justify-content: center;
     flex-direction: row;
 
-    & > div {
+    &>div {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
     }
 
-    background:
-        linear-gradient($gradient_tilt, rgba(47, 79, 79, 0.10), rgb(20, 20, 20)),
-        url('../images/packer_blur.jpg'),
-        rgb(20, 20, 20);
+    background: linear-gradient($gradient_tilt, rgba(47, 79, 79, 0.10), rgb(20, 20, 20)),
+    url('../images/packer_blur.jpg'),
+    rgb(20, 20, 20);
 
     // font styling
     font-family: $code_font;
@@ -75,11 +75,11 @@ section#header {
         padding: $md_spacing;
     }
 
-    & #user-icon > img {
-      width: 240px;
-      height: 240px;
-      border-radius: 120px;
-      margin-bottom: $xl_spacing;
+    & #user-icon>img {
+        width: 240px;
+        height: 240px;
+        border-radius: 120px;
+        margin-bottom: $xl_spacing;
     }
 
     & #contact-links {
@@ -89,7 +89,7 @@ section#header {
         justify-content: center;
         align-items: center;
 
-        & > a {
+        &>a {
             display: block;
             max-height: 2em;
 
@@ -100,6 +100,7 @@ section#header {
             &:hover {
                 color: white;
             }
+
             &:visited {
                 color: white;
             }
@@ -108,7 +109,7 @@ section#header {
                 margin-right: 0px;
             }
 
-            & > i {
+            &>i {
                 font-size: 2em;
             }
         }
@@ -123,7 +124,7 @@ section#header {
     stroke-linecap: round;
     stroke-linejoin: round;
     fill: none;
-  }
+}
 
 section#introduction {
     background: linear-gradient($gradient_tilt2, rgb(20, 20, 20), rgb(35, 35, 42));
@@ -138,11 +139,11 @@ section#introduction {
 
     &::before {
         content: '[guest@web ~] cat intro.txt';
-        
+
         max-width: $reg_max_width;
         width: 100%;
         align-self: left;
-        
+
         color: rgb(120, 180, 230);
         font-weight: bold;
     }
@@ -152,6 +153,7 @@ section#introduction {
 
         margin-top: $md_spacing;
         margin-bottom: $md_spacing;
+
         &:last-child {
             margin-bottom: $no_spacing;
         }
@@ -180,12 +182,13 @@ section#contributions {
         display: flex;
         justify-content: left;
         align-items: center;
-        
+
         margin-bottom: $lg_spacing;
+
         &:last-child {
             margin-bottom: $no_spacing;
         }
-        
+
         &>a {
             color: white;
             text-decoration: none;
@@ -244,6 +247,10 @@ section#contributions {
                 }
             }
 
+            &>.expand {
+                display: none;
+            }
+
             // description styling
             &>.desc {
                 display: none;
@@ -258,7 +265,8 @@ section#contributions {
             &:hover>.desc {
                 display: block;
 
-                &::before, &::after {
+                &::before,
+                &::after {
                     content: "\00a0";
                     font-size: 0.5em;
                     display: block;
@@ -278,12 +286,13 @@ section#technologies {
     align-items: center;
     justify-content: left;
 
-    & > div {
+    &>div {
         @include force-min-max-width;
 
         & .topic {
             font-weight: bold;
         }
+
         & .entries {
             font-style: italic;
         }
@@ -296,11 +305,79 @@ section#technologies {
     }
 }
 
+@media only screen and (min-device-width: 320px) and (max-device-width: 720px) and (-webkit-min-device-pixel-ratio: 2) {
+    body {
+        font-size: 24px;
+    }
 
-@media screen and (max-width: 720px) {
+    section#header #contact-links {
+        position: absolute;
+        height: 96px;
+        bottom: 96px;
 
-    /* some rules for mobile view here */
-    section#header {
-        background-color: darkslategray;
+        max-width: unset;
+        width: 100%;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .feather {
+        width: 96px;
+        height: 96px;
+    }
+
+    section#introduction,
+    section#technologies {
+        font-size: 36px;
+    }
+
+    section#introduction {
+        &::before {
+            max-width: $mob_max_width;
+        }
+
+        &>* {
+            max-width: $mob_max_width;
+        }
+    }
+
+    section#contributions {
+        font-size: 42px;
+
+        &>div {
+            max-width: $mob_max_width;
+            min-width: $mob_max_width;
+
+            &>a>div {
+
+                &.lang,
+                &.org,
+                &.stars {
+                    display: none
+                }
+
+                &.desc {
+                    min-width: $mob_max_width;
+                }
+
+                &.project {
+                    padding: 0px 0.5em !important;
+                }
+
+                &.expand {
+                    display: block;
+                    background-color: darkslategray;
+
+                    .feather {
+                        width: 1.15em;
+                        height: 1.15em;
+                    }
+                }
+            }
+        }
+
     }
 }
